# rgae_scraper

./: .gitignore  pyproject.toml  root_urls.yaml
rgae_scraper/: __main__.py  pdf_ocr_utils.py
